--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.3",
     "prisma": "^4.14.1",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "fastify": "^4.17.0",
     "zod": "^3.21.4"
